Use Java 1.8